--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -18,7 +18,11 @@
                 <li>по вопросам обращаться log1957@bk.ru</li>
                 <li></li>
                 </ul>
-                <a href="{{url_for('payment', id=item.id)}}" type="button" class="btn btn-lg btn-block btn-outline-primary">Buy this product</a>
+                {% if current_user.is_authenticated %}
+                    <a href="{{url_for('payment', id=item.id)}}" type="button" class="btn btn-lg btn-block btn-outline-primary">Buy this product</a>
+                {% else %}
+                    <a class="p-2 text-dark" href="{{ url_for('login') }}">Log in</a>
+                {% endif %}
             </div>
         </div>
     {% endfor %}
