рабочая покупка без связи с БД

--- a/shop/templates/buyform.html
+++ b/shop/templates/buyform.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>покупка товара</h1>
 <form action="" method="post">
-    <h2>Покупка {{ id }}</h2>
+    {{ form.hidden_tag() }}
+    <h2>Покупка {{ item.title }}</h2>
     <div class="mb-3 row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
@@ -11,8 +11,14 @@
         </div>
     </div>
     <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Телефон для связи</label>
-        <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="8 800 555 35 35">
+        {{ form.number.label(class="form-label") }} <br>
+        {{ form.number(class="form-control", type="number", placeholder="8 800 555 35 35") }}<br>
     </div>
+    <div class="mb-3">
+        {{ form.time.label(class="form-label") }} <br>
+        {{ form.time(class="form-control", type="text", placeholder="время для связи (по мск)") }}<br>
+    </div>
+    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+    <div>{{ message }}</div>
 </form>
 {% endblock %}
