--- a/shop/templates/buyform.html
+++ b/shop/templates/buyform.html
@@ -12,7 +12,7 @@
     </div>
     <div class="mb-3">
         {{ form.number.label(class="form-label") }} <br>
-        {{ form.number(class="form-control", type="number", placeholder="8 800 555 35 35") }}<br>
+        {{ form.number(class="form-control", type="text", placeholder="8 800 555 35 35") }}<br>
     </div>
     <div class="mb-3">
         {{ form.time.label(class="form-label") }} <br>
