--- a/shop/templates/about.html
+++ b/shop/templates/about.html
@@ -5,7 +5,8 @@
 {% block content %}
     <div class="container">
         <h1>About store</h1>
-        <li>Наш магазин существует на протяжении 6 лет</li>
+        <li>Наш магазин существует на протяжении 3 лет</li>
         <li>P.S. цены в долларах, т.к. самая удобная валюта :)</li>
+        <li>Главный продавец - Глеб Логинов, ака Глебик</li>
     </div>
 {% endblock %}
