--- a/shop/templates/checklist.html
+++ b/shop/templates/checklist.html
@@ -6,14 +6,14 @@
     {% for number in numbers %}
         <div class="card mb-4 shadow-sm">
             <div class="card-header">
-                <h4 class="my-0 font-weight-normal">{{ number.number }}</h4>
+                <h4 class="my-0 font-weight-normal">{{ number.number0 }}</h4>
             </div>
             <div class="card-body">
-                <h1 class="card-title pricing-card-title">{{ number.time }} <small class="text-muted"></small></h1>
+                <h1 class="card-title pricing-card-title">{{ number.time0 }} <small class="text-muted"></small></h1>
                 <ul class="list-unstyled mt-3 mb-4">
                 </ul>
                 {% if current_user.id == 1 %}
-                    <a href=type="button" class="btn btn-lg btn-block btn-outline-primary">просмотренно</a>
+                    <a type="button" class="btn btn-lg btn-block btn-outline-primary">просмотренно</a>
                 {% endif %}
             </div>
         </div>
