--- a/shop/templates/buyform.html
+++ b/shop/templates/buyform.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form action="" method="post">
     {{ form.hidden_tag() }}
-    <h2>Покупка {{ item.title }}</h2>
+    <h2>Покупка "{{ item.title }}"</h2>
     <div class="mb-3 row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
