--- a/shop/templates/includes/header.html
+++ b/shop/templates/includes/header.html
@@ -3,6 +3,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{{ url_for('index') }}">Main</a>
         <a class="p-2 text-dark" href="{{ url_for('about') }}">About shop</a>
+        <a class="p-2 text-dark" href="{{ url_for('blog') }}">Blog</a>
          {% if current_user.is_authenticated %}
             <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
         {% else %}
@@ -13,5 +14,6 @@
     {% if current_user.id == 1 %}
         <a class="btn btn-outline-primary" href="{{ url_for('create') }}">Add product</a>
         <a class="btn btn-outline-primary" href="{{ url_for('checklist') }}">Checklist</a>
+        <a class="btn btn-outline-primary" href="{{ url_for('createblog') }}">Create_blog</a>
     {% endif %}
 </div>
