--- a/shop/templates/blog.html
+++ b/shop/templates/blog.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
     <h1>Записи в блоге</h1>
     {% for record in news%}
         <div class="col-md6 border rounded">
@@ -17,4 +18,5 @@
             {% endif %}
         </div>
     {% endfor %}
+</div>
 {% endblock %}
