--- a/shop/templates/blog.html
+++ b/shop/templates/blog.html
@@ -11,7 +11,7 @@
             </div>
             {% if current_user.id == 1 %}
                 <div>
-                    <a href="/news_delete/{{ record.id }}" class="btn btn-danger">
+                    <a href="/news_delete/{{ record.id }}" class="btn btn-lg btn-block btn-outline-primary">
                         Удалить
                     </a>
                 </div>
