--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -21,7 +21,7 @@
                 {% if current_user.is_authenticated %}
                     <a href="{{url_for('buyform', id=item.id)}}" type="button" class="btn btn-lg btn-block btn-outline-primary">Buy this product</a>
                     {% if current_user.id == 1 %}
-                        <a href="/item_delete/{{ item.id }}" class="btn btn-danger">Удалить</a>
+                        <a href="/item_delete/{{ item.id }}" class="btn btn-lg btn-block btn-outline-primary">Удалить</a>
                     {% endif %}
                 {% else %}
                     <a class="p-2 text-dark" href="{{ url_for('login') }}">Log in</a>
