add a item_names

--- a/shop/templates/checklist.html
+++ b/shop/templates/checklist.html
@@ -11,6 +11,7 @@
                 </div>
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title">{{ number.time0 }} <small class="text-muted"></small></h1>
+                    <h2 class="card-title pricing-card-title">{{ number.item_name }} <small class="text-muted"></small></h2>
                     <ul class="list-unstyled mt-3 mb-4">
                     </ul>
                 </div>
